potential fix for popup layout shift

--- a/app/assets/stylesheets/chat-ui-popup.scss
+++ b/app/assets/stylesheets/chat-ui-popup.scss
@@ -153,9 +153,10 @@ $page-height: calc(100% - 5px);
 }
 
 .ciapiSkinChatTranscript {
-    height: calc(100% - #{$transcript-sub-height});
+    height: 300px;
     overflow: scroll;
     overflow-x: hidden;
+    overflow-y: auto;
     padding-right: 14px;
     padding-left: 1em;
     position: relative;
